--- a/A ajouter plus tard/Acceuil-FX.fxml
+++ b/A ajouter plus tard/Acceuil-FX.fxml
@@ -108,6 +108,9 @@
                <VBox.margin>
                   <Insets top="10.0" />
                </VBox.margin>
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
             </Button>
          </children>
          <BorderPane.margin>
