--- a/Diagramme/Inscription-FX.fxml
+++ b/Diagramme/Inscription-FX.fxml
@@ -38,7 +38,7 @@
          <children>
             <VBox prefHeight="295.0" prefWidth="369.0" style="-fx-background-color: e6e6fa;">
                <children>
-                  <Label text="e-mail">
+                  <Label text="Email">
                      <padding>
                         <Insets left="50.0" top="20.0" />
                      </padding>
@@ -81,11 +81,23 @@
                         <Insets left="50.0" top="10.0" />
                      </padding>
                   </RadioButton>
-                  <Button mnemonicParsing="false" text="Créer un nouveau compte">
-                     <VBox.margin>
-                        <Insets left="50.0" top="20.0" />
-                     </VBox.margin>
-                  </Button>
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button mnemonicParsing="false" text="Créer un nouveau compte">
+                           <HBox.margin>
+                              <Insets left="50.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button mnemonicParsing="false" text="Retour">
+                           <HBox.margin>
+                              <Insets left="20.0" />
+                           </HBox.margin>
+                        </Button>
+                     </children>
+                     <padding>
+                        <Insets top="20.0" />
+                     </padding>
+                  </HBox>
                </children>
             </VBox>
             <VBox alignment="CENTER_LEFT" minHeight="186.0" minWidth="221.0" prefHeight="295.0" prefWidth="233.0" style="-fx-background-color: e6e6fa;">
