--- a/Diagramme/Acceuil-FX.fxml
+++ b/Diagramme/Acceuil-FX.fxml
@@ -4,17 +4,18 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <VBox prefHeight="63.0" prefWidth="600.0" style="-fx-background-color: eeeeee;" BorderPane.alignment="CENTER">
          <children>
-            <Label prefHeight="63.0" prefWidth="539.0" text="Bienvenue sur Appli Gestion JO">
+            <Label prefHeight="63.0" prefWidth="632.0" text="Bienvenue sur Appli Gestion JO">
                <font>
                   <Font name="System Bold" size="30.0" />
                </font>
@@ -75,7 +76,7 @@
                         <Insets left="50.0" top="20.0" />
                      </padding>
                   </Label>
-                  <TextField>
+                  <TextField fx:id="identconnexe">
                      <VBox.margin>
                         <Insets left="50.0" right="50.0" />
                      </VBox.margin>
@@ -85,7 +86,7 @@
                         <Insets left="50.0" />
                      </padding>
                   </Label>
-                  <TextField>
+                  <TextField fx:id="motconnexe">
                      <opaqueInsets>
                         <Insets />
                      </opaqueInsets>
@@ -95,12 +96,12 @@
                   </TextField>
                   <HBox prefHeight="100.0" prefWidth="200.0">
                      <children>
-                        <Button mnemonicParsing="false" text="Se connecter">
+                        <Button fx:id="connecter" mnemonicParsing="false" text="Se connecter">
                            <HBox.margin>
                               <Insets left="50.0" top="20.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" text="Pas de compte?">
+                        <Button fx:id="pascompte" mnemonicParsing="false" text="Pas de compte?">
                            <HBox.margin>
                               <Insets left="30.0" top="20.0" />
                            </HBox.margin>
@@ -114,10 +115,17 @@
                   <Insets />
                </opaqueInsets>
                <children>
-                  <ImageView fitHeight="199.0" fitWidth="226.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fitHeight="156.0" fitWidth="351.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../../Bureau/sae/SAE-2.01-2.07-java/Diagramme/img/Logo-anneax-olympiques-1024x473.png" />
+                     </image>
+                  </ImageView>
                </children>
             </VBox>
          </children>
       </HBox>
    </center>
+   <padding>
+      <Insets left="10.0" right="10.0" />
+   </padding>
 </BorderPane>
