--- a/Diagramme/Backup/Ajouter-FX.fxml
+++ b/Diagramme/Backup/Ajouter-FX.fxml
@@ -16,6 +16,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+
 <TabPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
    <tabs>
       <Tab text="Ajoute Athlèthe">
@@ -166,6 +167,65 @@
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
                         <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer l'Athlète" />
+                     </children>
+                  </HBox>
+               </bottom>
+            </BorderPane>
+         </content>
+      </Tab>
+      <Tab text="Ajoute Pays">
+         <content>
+            <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+               <top>
+                  <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" style="-fx-background-color: ddddd;" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label text="Créer un Pays">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+               </top>
+               <center>
+                  <HBox prefHeight="197.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <VBox alignment="BOTTOM_LEFT" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: e6e6fa;">
+                           <children>
+                              <Label text="Nom du pays">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </Label>
+                              <TextField>
+                                 <VBox.margin>
+                                    <Insets bottom="30.0" left="20.0" right="40.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <HBox prefHeight="100.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER_LEFT" prefHeight="255.0" prefWidth="309.0" style="-fx-background-color: e6e6fa;">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0" />
+                              <ImageView fitHeight="128.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true" />
+                              <Button mnemonicParsing="false" text="Choisir le drapeau...">
+                                 <VBox.margin>
+                                    <Insets bottom="60.0" />
+                                 </VBox.margin>
+                              </Button>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </center>
+               <bottom>
+                  <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer le Pays" />
                      </children>
                   </HBox>
                </bottom>
@@ -578,90 +638,6 @@
                   <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
                         <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer l'Epreuve" />
-                     </children>
-                  </HBox>
-               </bottom>
-            </BorderPane>
-         </content>
-      </Tab>
-      <Tab text="Ajoute Pays">
-         <content>
-            <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
-               <top>
-                  <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" style="-fx-background-color: ddddd;" BorderPane.alignment="CENTER">
-                     <children>
-                        <Label text="Créer un Pays">
-                           <font>
-                              <Font name="System Bold" size="12.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </HBox>
-               </top>
-               <center>
-                  <HBox prefHeight="197.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <VBox alignment="CENTER_LEFT" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: e6e6fa;">
-                           <children>
-                              <Label text="Nom du pays">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" />
-                                 </VBox.margin>
-                                 <padding>
-                                    <Insets left="20.0" />
-                                 </padding>
-                              </Label>
-                              <TextField>
-                                 <VBox.margin>
-                                    <Insets bottom="30.0" left="20.0" right="40.0" />
-                                 </VBox.margin>
-                              </TextField>
-                              <Label text="hymne du pays">
-                                 <padding>
-                                    <Insets left="20.0" />
-                                 </padding>
-                              </Label>
-                              <Button mnemonicParsing="false" text="choisir une hymne...">
-                                 <VBox.margin>
-                                    <Insets left="20.0" top="20.0" />
-                                 </VBox.margin>
-                              </Button>
-                              <HBox prefHeight="100.0" prefWidth="200.0">
-                                 <children>
-                                    <Label text="écouter l'hymne">
-                                       <HBox.margin>
-                                          <Insets left="20.0" top="30.0" />
-                                       </HBox.margin>
-                                    </Label>
-                                    <Button mnemonicParsing="false" prefHeight="41.0" prefWidth="32.0">
-                                       <graphic>
-                                          <ImageView fitHeight="33.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true" />
-                                       </graphic>
-                                       <HBox.margin>
-                                          <Insets left="20.0" top="20.0" />
-                                       </HBox.margin>
-                                    </Button>
-                                 </children></HBox>
-                           </children>
-                        </VBox>
-                        <VBox alignment="CENTER_LEFT" prefHeight="255.0" prefWidth="309.0" style="-fx-background-color: e6e6fa;">
-                           <children>
-                              <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0" />
-                              <ImageView fitHeight="128.0" fitWidth="228.0" pickOnBounds="true" preserveRatio="true" />
-                              <Button mnemonicParsing="false" text="Choisir le drapeau...">
-                                 <VBox.margin>
-                                    <Insets bottom="60.0" />
-                                 </VBox.margin>
-                              </Button>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-               </center>
-               <bottom>
-                  <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer le Pays" />
                      </children>
                   </HBox>
                </bottom>
