--- a/Diagramme/Backup/Créer_Athlèthe-FX.fxml
+++ b/Diagramme/Backup/Créer_Athlèthe-FX.fxml
@@ -5,152 +5,218 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Slider?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" style="-fx-background-color: ddddd;" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Créer un athlèthe">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font>
-            </Label>
-         </children>
-      </HBox>
-   </top>
-   <center>
-      <HBox prefHeight="197.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <VBox alignment="BOTTOM_LEFT" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: e6e6fa;">
-               <children>
-                  <Label text="Nom">
-                     <padding>
-                        <Insets left="20.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField>
-                     <VBox.margin>
-                        <Insets left="20.0" right="40.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Prenom">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="20.0" top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <TextField>
-                     <VBox.margin>
-                        <Insets left="20.0" right="40.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <Label text="Sexe">
-                     <VBox.margin>
-                        <Insets bottom="10.0" left="20.0" top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <HBox prefHeight="100.0" prefWidth="200.0">
+<TabPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+   <tabs>
+      <Tab text="Ajoute Athlèthe">
+         <content>
+            <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+               <top>
+                  <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" style="-fx-background-color: ddddd;" BorderPane.alignment="CENTER">
                      <children>
-                        <RadioButton mnemonicParsing="false" text="Homme">
-                           <padding>
-                              <Insets right="15.0" />
-                           </padding>
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </RadioButton>
-                        <RadioButton mnemonicParsing="false" text="Femme">
-                           <padding>
-                              <Insets right="15.0" />
-                           </padding>
-                        </RadioButton>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-            <VBox prefHeight="255.0" prefWidth="309.0" style="-fx-background-color: e6e6fa;">
-               <children>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0">
-                     <children>
-                        <Label text="Agilité">
-                           <HBox.margin>
-                              <Insets />
-                           </HBox.margin>
+                        <Label text="Créer un athlèthe">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
                         </Label>
-                        <TextField prefHeight="25.0" prefWidth="40.0">
-                           <HBox.margin>
-                              <Insets left="20.0" />
-                           </HBox.margin>
-                        </TextField>
                      </children>
                   </HBox>
-                  <Slider>
-                     <VBox.margin>
-                        <Insets bottom="40.0" left="40.0" right="40.0" />
-                     </VBox.margin>
-                  </Slider>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0">
+               </top>
+               <center>
+                  <HBox prefHeight="197.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label text="Endurance">
-                           <HBox.margin>
-                              <Insets left="-20.0" />
-                           </HBox.margin>
-                        </Label>
-                        <TextField prefWidth="40.0">
-                           <HBox.margin>
-                              <Insets left="20.0" />
-                           </HBox.margin>
-                        </TextField>
+                        <VBox alignment="BOTTOM_LEFT" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: e6e6fa;">
+                           <children>
+                              <Label text="Nom">
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField>
+                                 <VBox.margin>
+                                    <Insets left="20.0" right="40.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <Label text="Prenom">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="20.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <TextField>
+                                 <VBox.margin>
+                                    <Insets left="20.0" right="40.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <Label text="Sexe">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" left="20.0" top="10.0" />
+                                 </VBox.margin>
+                              </Label>
+                              <HBox prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <RadioButton mnemonicParsing="false" text="Homme">
+                                       <padding>
+                                          <Insets right="15.0" />
+                                       </padding>
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                    </RadioButton>
+                                    <RadioButton mnemonicParsing="false" text="Femme">
+                                       <padding>
+                                          <Insets right="15.0" />
+                                       </padding>
+                                    </RadioButton>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="255.0" prefWidth="309.0" style="-fx-background-color: e6e6fa;">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0">
+                                 <children>
+                                    <Label text="Agilité">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField prefHeight="25.0" prefWidth="40.0">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                              </HBox>
+                              <Slider>
+                                 <VBox.margin>
+                                    <Insets bottom="40.0" left="40.0" right="40.0" />
+                                 </VBox.margin>
+                              </Slider>
+                              <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0">
+                                 <children>
+                                    <Label text="Endurance">
+                                       <HBox.margin>
+                                          <Insets left="-20.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField prefWidth="40.0">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="20.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <Slider>
+                                 <VBox.margin>
+                                    <Insets bottom="40.0" left="40.0" right="40.0" />
+                                 </VBox.margin>
+                              </Slider>
+                              <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+                                 <children>
+                                    <Label text="Force">
+                                       <HBox.margin>
+                                          <Insets left="10.0" />
+                                       </HBox.margin>
+                                    </Label>
+                                    <TextField prefWidth="40.0">
+                                       <HBox.margin>
+                                          <Insets left="20.0" />
+                                       </HBox.margin>
+                                    </TextField>
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets top="20.0" />
+                                 </VBox.margin>
+                              </HBox>
+                              <Slider>
+                                 <VBox.margin>
+                                    <Insets bottom="40.0" left="40.0" right="40.0" />
+                                 </VBox.margin>
+                              </Slider>
+                           </children>
+                        </VBox>
                      </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
                   </HBox>
-                  <Slider>
-                     <VBox.margin>
-                        <Insets bottom="40.0" left="40.0" right="40.0" />
-                     </VBox.margin>
-                  </Slider>
-                  <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0">
+               </center>
+               <bottom>
+                  <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Label text="Force">
-                           <HBox.margin>
-                              <Insets left="10.0" />
-                           </HBox.margin>
-                        </Label>
-                        <TextField prefWidth="40.0">
-                           <HBox.margin>
-                              <Insets left="20.0" />
-                           </HBox.margin>
-                        </TextField>
+                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer l'Athlète" />
                      </children>
-                     <VBox.margin>
-                        <Insets top="20.0" />
-                     </VBox.margin>
                   </HBox>
-                  <Slider>
-                     <VBox.margin>
-                        <Insets bottom="40.0" left="40.0" right="40.0" />
-                     </VBox.margin>
-                  </Slider>
-               </children>
-            </VBox>
-         </children>
-      </HBox>
-   </center>
-   <bottom>
-      <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
-         <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer l'Athlète" />
-         </children>
-      </HBox>
-   </bottom>
-</BorderPane>
+               </bottom>
+            </BorderPane>
+         </content>
+      </Tab>
+      <Tab text="Ajoute Pays">
+         <content>
+            <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+               <top>
+                  <HBox alignment="CENTER_LEFT" prefHeight="47.0" prefWidth="600.0" style="-fx-background-color: ddddd;" BorderPane.alignment="CENTER">
+                     <children>
+                        <Label text="Créer un athlèthe">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </HBox>
+               </top>
+               <center>
+                  <HBox prefHeight="197.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <VBox alignment="BOTTOM_LEFT" prefHeight="300.0" prefWidth="300.0" style="-fx-background-color: e6e6fa;">
+                           <children>
+                              <Label text="Nom">
+                                 <VBox.margin>
+                                    <Insets bottom="10.0" />
+                                 </VBox.margin>
+                                 <padding>
+                                    <Insets left="20.0" />
+                                 </padding>
+                              </Label>
+                              <TextField>
+                                 <VBox.margin>
+                                    <Insets left="20.0" right="40.0" />
+                                 </VBox.margin>
+                              </TextField>
+                              <HBox prefHeight="100.0" prefWidth="200.0" />
+                           </children>
+                        </VBox>
+                        <VBox prefHeight="255.0" prefWidth="309.0" style="-fx-background-color: e6e6fa;">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="40.0" prefWidth="291.0" />
+                              <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
+                              <Button mnemonicParsing="false" text="Choisir le drapeau..." />
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </center>
+               <bottom>
+                  <HBox prefHeight="57.0" prefWidth="600.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="109.0" text="Créer l'Athlète" />
+                     </children>
+                  </HBox>
+               </bottom>
+            </BorderPane>
+         </content>
+      </Tab>
+   </tabs>
+</TabPane>
